updated splash page and removed redundant url-checking logic

--- a/splash.html
+++ b/splash.html
@@ -1,5 +1,6 @@
 <html>
   <body>
-    <h1>Glassdoor Clarity</h1>
+    <h1>Clear Glass</h1>
+    <p>Remove obstructions from Glassdoor</p>
   </body>
 </html>
