improved styling and content of extension splash page

--- a/splash.html
+++ b/splash.html
@@ -1,6 +1,20 @@
 <html>
-  <body>
-    <h1>Clear Glass</h1>
-    <p>Remove obstructions from Glassdoor</p>
-  </body>
+    <body
+        style="
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 200px;
+        "
+    >
+        <h1 style="color: rgb(17, 129, 48); font-size: 14px; margin-bottom: -2px">Clear Glass</h1>
+        <p style="text-align: center; margin-bottom: -2px">
+            Removes obstructions from Glassdoor by:
+        </p>
+        <ul style="margin-left: -20px">
+            <li style="margin-bottom: 5px">Hiding blocking elements form the page</li>
+            <li>Disabling restrictive scroll behavior</li>
+        </ul>
+    </body>
 </html>
