fixed typo on splash page

--- a/splash.html
+++ b/splash.html
@@ -13,7 +13,7 @@
             Removes obstructions from Glassdoor by:
         </p>
         <ul style="margin-left: -20px">
-            <li style="margin-bottom: 5px">Hiding blocking elements form the page</li>
+            <li style="margin-bottom: 5px">Hiding blocking elements from the page</li>
             <li>Disabling restrictive scroll behavior</li>
         </ul>
     </body>
