updated splash page

--- a/splash.html
+++ b/splash.html
@@ -10,7 +10,7 @@
     >
         <h1 style="color: rgb(17, 129, 48); font-size: 14px; margin-bottom: -2px">Clear Glass</h1>
         <p style="text-align: center; margin-bottom: -2px">
-            Removes obstructions from Glassdoor by:
+            Removes obstructions from Glassdoor, Blind, and Repvue by:
         </p>
         <ul style="margin-left: -20px">
             <li style="margin-bottom: 5px">Hiding blocking elements from the page</li>
